--- a/static/package.json
+++ b/static/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/babel src -d js"
+    "build": "node ./build.js"
   },
   "author": "",
   "license": "ISC",
