--- a/static/package.json
+++ b/static/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.16"
   },
   "devDependencies": {
@@ -18,8 +19,8 @@
     "babelify": "^8.0.0",
     "browserfy": "^1.0.0",
     "browserify": "^16.2.2"
-},
-"browser":{
-    "vue":"vue/dist/vue.common.js"
-}
+  },
+  "browser": {
+    "vue": "vue/dist/vue.common.js"
+  }
 }
